trying to solve video problem on mobile 4

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -340,7 +340,7 @@ header {
 	}
 
     .hero-video {
-        height: 100%;
+        height: 30rem;
         width: 100vw;
         position: relative;
 
